gitops/apps/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  namespace: frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  minReadySeconds: 5
  revisionHistoryLimit: 5
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      name: front
      labels:
        app: front
    spec:
      #이미지 풀 시크릿
      imagePullSecrets:
        - name: regcred
      containers:
        - name: front
          image: 804394216826.dkr.ecr.ap-northeast-2.amazonaws.com/teame-front-dev:63c5e15a7a2544d225d82d6344d5e1cfd3d950e8
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "1024m"
