gitops/apps/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: front
  labels:
    app: front
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: front
